<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nigeria Import Duty Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="hs_code_list_title">HS Codes</string>
    <string name="networkError">Please check your internet connection.</string>
    <string name="title_activity_details">Details</string>
    <string name="banner_ad_unit">ca-app-pub-9323445577003464/5237222742</string>
    <string name="desc">Description</string>
    <string name="calculateBtn">Calculate</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>


    <string name="isDebug">true</string>
    <string name="drawer_close">Drawer close</string>
    <string name="drawer_open">Drawer open</string>

    <string-array name="menu_list">
        <item>Calculator</item>
        <item>Tariff List</item>
        <item>Favorites</item>
        <item>Prohibition List</item>
        <item>CEMA Laws</item>
    </string-array>
    <string name="title_activity_search_results">Search</string>
    <string name="txt_naira">In Naira</string>
    <string name="txt_dollars">In Dollars</string>
    <string name="txt_xr_hint">EXCHANGE RATE</string>
    <string name="txt_fob_hint">FOB(Freight on board)</string>
    <string name="txt_cif_hint">CIF(Cost Insurance Freight)</string>
    <string name="txt_brand">Brand</string>
    <string name="txt_model">Model</string>
    <string name="txt_year">Year</string>
    <string name="txt_used">Used?</string>

</resources>
